# Wrought-Iron

./: README.md  SECURITY.md
about/demo/: README.md  setup_demo.py
about/demo/demos/module_01_infrastructure/: main.py  source.db  target.db
about/demo/demos/module_01_infrastructure/deep/nested/folder/: deep_archive.db
about/demo/demos/module_02_schema/: complex.db  v1.db  v2.db
about/demo/demos/module_03_data_exploration/: exploration.db
about/demo/demos/module_04_analytics/: analytics.db
about/demo/demos/module_05_visualization/: weather.db
about/demo/demos/module_06_data_wrangling/: dirty.db  schema_rules.json
about/demo/demos/module_07_geospatial/: geo.db
about/demo/demos/module_08_machine_learning/: ml.db
about/demo/demos/module_09_audit_security/: secure.db
about/demo/demos/module_10_operations/: ops.db  pipeline.yaml
about/demo/demos/module_11_collaboration/: project.db  team_config.json
about/demo/demos/module_12_reporting/: report_source.db
source/compiling/: WroughtIronInstaller.iss  license.rtf  wrought_iron.spec
source/compiling/to_db/: to_db.bat  to_db.py  universal-converter.spec
source/src/: pyproject.toml  requirements.txt
source/src/wrought_iron/cli/: aggregate.py  audit.py  clean.py  collab.py  connect.py  geo.py  interact.py  ml.py  ops.py  plot.py  query.py  report.py  schema.py  utils.py
